log/build_2026-02-24_20-29-32/robot_arm_2025_tasks/stderr.log
  File "/home/cody/ws_moveit/install/robot_arm_2025_tasks/lib/python3.10/site-packages/robot_arm_2025_tasks/typing_node.py", line 221
    qx=<from tf>,
       ^
SyntaxError: invalid syntax

